--- a/taylor-swift-website/src/index.css
+++ b/taylor-swift-website/src/index.css
@@ -264,35 +264,57 @@ h1, h2, h3, p, a {
   background: #93154F;
 }
 
+.projects-page-background {
+  height: 100%;
+  width: 100%;
+  background: #D5ADC2;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: .5;
+}
+
 .opac-projects-background {
   position: absolute;
   background: black;
   width: 85%;
   max-width: 970px;
-  height: 90%;
-  max-height: 640px;
+  height: 100%;
+  max-height: 700px;
   margin: auto;
   top: 10px;
   bottom: 10px;
   left: 0;
   right: 0;
   z-index: 1;
-  opacity: .75;
+  opacity: .8;
+  border-radius: 8px;
 
 }
 
 .projects-container {
   padding: 1rem;
   color: white;
-  position: relative;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 0;
+  right: 0;
   width: 90%;
   height: 100%;
+  max-height: 700px;
   margin: auto;
-  padding: 3rem;
+  padding:2rem 3rem;
   z-index: 3;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.5rem;
+}
+
+.projects-title {
+  font-weight: 200;
 }
 
 .current-song {
@@ -302,6 +324,8 @@ h1, h2, h3, p, a {
   align-items: center;
   gap: 1rem;
   padding: 1rem 2rem;
+  max-height: 218px;
+  border-radius: 8px;
 }
 
 .now-playing-container {
@@ -325,17 +349,46 @@ h1, h2, h3, p, a {
 
 .song-list {
   background: #93154F;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  max-height: 350px;
+  overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #D5ADC2;
+  border-radius: 8px;
 }
 
-.song-example {}
+/* .song-list::-webkit-scrollbar-track {
+  background: #D5ADC2;
+} */
+
+.song-example {
+  display: flex;
+  justify-content: center;
+  padding: .5rem;
+  background: #D5ADC2;
+  gap: .5rem;
+  align-items: center;
+  border-radius: 8px;
+}
 
 .projects-song-btn {
   border: none;
   background: none;
 }
 
-.play {}
+.play {
+  margin-left: auto;
+}
 
-.pause {}
+.pause {
+  margin-left: auto;
+}
 
 .download {}
+
+.projects-page p {
+  font-family: "Inter", sans-serif;
+}
