--- a/taylor-swift-website/src/index.css
+++ b/taylor-swift-website/src/index.css
@@ -112,7 +112,7 @@ h1, h2, h3, p, a {
 }
 
 .mobile-nav-container {
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 10;
   height: 100vh;
