--- a/taylor-swift-website/src/index.css
+++ b/taylor-swift-website/src/index.css
@@ -1,71 +1,3 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
 * {
   margin: 0;
   padding: 0;
@@ -85,7 +17,9 @@ h1, h2, h3, p, a {
 .site-header {
   background: #93154F;
   color: white;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  z-index: 15;
 }
 
 .header-and-ham-container {
@@ -114,7 +48,7 @@ h1, h2, h3, p, a {
 .mobile-nav-container {
   position: fixed;
   top: 0;
-  z-index: 10;
+  z-index: 100;
   height: 100vh;
   background: #D5ADC2;
   color: #93154F;
@@ -261,7 +195,6 @@ h1, h2, h3, p, a {
 
 .projects-page {
   position: relative;
-  background: #93154F;
 }
 
 .projects-page-background {
@@ -281,8 +214,7 @@ h1, h2, h3, p, a {
   background: black;
   width: 85%;
   max-width: 970px;
-  height: 100%;
-  max-height: 700px;
+  height: auto;
   margin: auto;
   top: 10px;
   bottom: 10px;
@@ -361,10 +293,6 @@ h1, h2, h3, p, a {
   border-radius: 8px;
 }
 
-/* .song-list::-webkit-scrollbar-track {
-  background: #D5ADC2;
-} */
-
 .song-example {
   display: flex;
   justify-content: center;
@@ -392,4 +320,59 @@ h1, h2, h3, p, a {
 
 .projects-page p {
   font-family: "Inter", sans-serif;
+}
+
+/* ---------- TOUR DATES PAGE STYLES --------- */
+
+.tour-dates-page-container {
+  position: relative;
+}
+
+.tour-dates-list-container {
+  padding: 1rem;
+  color: white;
+  position: absolute;
+  top: 10px;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  width: 90%;
+  height: auto;
+  margin: auto;
+  padding:2rem 3rem;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.tour-dates-title {
+  font-weight: 200;
+}
+
+.tour-dates-list {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: left;
+  gap: 2rem;
+}
+
+.tour-date-item {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.tour-date-item p {
+  font-family: "Inter", sans-serif;
+}
+
+.tour-date-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.location-text {
+  text-align: left;
 }
